deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      containers:
        - name: flask-container
          image: shivrajtate99/flaskapp
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"

            limits:
              memory: "256Mi"
              cpu: "500m"
