service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service

spec:
  type: NodePort

  selector:
    app: flask

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
